<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/chucker_doub_grid">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/chuckerTransactionOverviewGuideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.28" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="start"
      android:text="@string/chucker_url"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewUrl"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="start"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_method"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewUrl" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewMethod"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@+id/chuckerTransactionOverviewUrl"
      tools:text="GET" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_protocol"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewMethod" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewProtocol"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewMethod"
      tools:text="HTTP/1.1" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_status"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewProtocol" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewStatus"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewProtocol"
      tools:text="Complete" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_response"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewStatus" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewResponse"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewStatus"
      tools:text="200 OK" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_ssl"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewResponse" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewSsl"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewResponse"
      tools:text="Yes" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/chucker_base_grid"
      android:text="@string/chucker_request_time"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewSsl" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewRequestTime"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/chucker_base_grid"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewSsl"
      tools:text="05/02/17 11:52:49" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_response_time"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewRequestTime" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewResponseTime"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewRequestTime"
      tools:text="05/02/17 11:52:49" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_duration"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewResponseTime" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewDuration"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewResponseTime"
      tools:text="405 ms" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/chucker_base_grid"
      android:text="@string/chucker_request_size"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewDuration" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewRequestSize"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/chucker_base_grid"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewDuration"
      tools:text="53 KB" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_response_size"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewRequestSize" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewResponseSize"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewRequestSize"
      tools:text="148 KB" />

    <TextView
      style="@style/Chucker.TextAppearance.Label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/chucker_total_size"
      app:layout_constraintEnd_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewResponseSize" />

    <TextView
      android:id="@+id/chuckerTransactionOverviewTotalSize"
      style="@style/Chucker.TextAppearance.Value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/chuckerTransactionOverviewGuideline"
      app:layout_constraintTop_toBottomOf="@id/chuckerTransactionOverviewResponseSize"
      tools:text="201 KB" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>