<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright (C) 2017 Jeff Gilfelt.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/Chucker.TextAppearance.TransactionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Title" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layoutDirection="ltr"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        tools:context="com.chuckerteam.chucker.internal.ui.traffic.websocket.WebsocketDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stretchColumns="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_url" />

                    <TextView
                        android:id="@+id/url"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_method" />

                    <TextView
                        android:id="@+id/method"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="GET" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_protocol" />

                    <TextView
                        android:id="@+id/protocol"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="HTTP/1.1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_status" />

                    <TextView
                        android:id="@+id/status"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Complete" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_response" />

                    <TextView
                        android:id="@+id/response"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="200 OK" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_ssl" />

                    <TextView
                        android:id="@+id/ssl"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Yes" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_request_time" />

                    <TextView
                        android:id="@+id/request_time"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="05/02/17 11:52:49" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_response_time" />

                    <TextView
                        android:id="@+id/response_time"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="05/02/17 11:52:49" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_duration" />

                    <TextView
                        android:id="@+id/duration"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="405 ms" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_request_size" />

                    <TextView
                        android:id="@+id/request_size"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="53 KB" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_response_size" />

                    <TextView
                        android:id="@+id/response_size"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="148 KB" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chucker.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chucker_total_size" />

                    <TextView
                        android:id="@+id/total_size"
                        style="@style/Chucker.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="201 KB" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textIsSelectable="true"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fields" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


